--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 services:
   builder:
     image: maven:3.9.8-amazoncorretto-17
-    container_name: java_app_builder
+    container_name: java_app_builder_bank_app
     volumes:
       - .:/usr/src/app
     working_dir: /usr/src/app
@@ -9,12 +9,12 @@ services:
 
   app:
     image: openjdk:17-jdk-slim
-    container_name: SberBank-0.0.1-SNAPSHOT
+    container_name: BankingApp-0.0.1-SNAPSHOT
     ports:
       - "8080:8080"
     volumes:
       - ./target/SberBank-0.0.1-SNAPSHOT.jar:/app/SberBank-0.0.1-SNAPSHOT.jar
-    entrypoint: ["java", "-jar", "/app/SberBank-0.0.1-SNAPSHOT.jar"]
+    entrypoint: ["java", "-jar", "/app/BankingApp-0.0.1-SNAPSHOT.jar"]
     depends_on:
       - builder
       - db
@@ -25,7 +25,7 @@ services:
 
   db:
     image: postgres:13
-    container_name: postgres_db
+    container_name: postgres_db_bank_app
     environment:
       POSTGRES_DB: mydatabase
       POSTGRES_USER: myuser
